--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
 
 /* ESTILO DO CABEÇALHO */
 header {
-    padding-top: 50px;
-    padding-left: 30px;
+    padding-top: 20px;
+    padding-left: 20px;
 }
 
 header .logo img {
@@ -29,18 +29,18 @@ header .logo img {
 
 /* ESTILO DO TOPO DO SITE */
 section.topo-do-site {
-    padding: 36px;
-    margin-top: 93px;
+    padding: 20px;
+    margin-top: 40px;
 }
 
 section.topo-do-site.flex {
-    border: 1px solid red;
     align-items: center;
     justify-content: center;
     gap: 80px;
 }
 
 .topo-do-site .txt-topo-site h1{
+    
     white-space: nowrap;
     color: #08C05E;
     font-size: 32px;
@@ -54,7 +54,7 @@ section.topo-do-site.flex {
     white-space: nowrap;
     margin: 10px 0;
     color: #FFF;
-    font-family: League Spartan;
+    font-family: 'League Spartan', sans-serif;
     font-size: 21px;
     font-style: normal;
     font-weight: 500;
@@ -64,21 +64,22 @@ section.topo-do-site.flex {
 .topo-do-site .txt-topo-site span {
     margin: 10px 0;
     color: #FFF;
-    font-family: League Spartan;
+    font-family: 'League Spartan', sans-serif;
     font-size: 17px;
     font-style: normal;
     font-weight: 200;
     line-height: normal
 }
 
+/* CAMPO EMAIL */
 section.part-email {
-    margin-top: 30px;
-    padding: 36px;
+    margin-top: 1px;
+    padding: 20px;
 }
 
 .part-email .text-email p{
     color: #A8A8A8;
-    font-family: League Spartan;
+    font-family: 'League Spartan', sans-serif;
     font-size: 19px;
     font-style: normal;
     font-weight: 500;
@@ -90,7 +91,7 @@ section.part-email {
     position: absolute;
     margin: 17px 0;
     width: 750px;
-    height: 48px;
+    height: 40px;
 }
 
 .campo-email button{
@@ -100,7 +101,7 @@ section.part-email {
     position: absolute;
     color: white;
     width: 48px;
-    height: 48px;
+    height: 40px;
     background-color: #8257E5;
     border: none;
 }
@@ -116,22 +117,75 @@ section.part-email {
     z-index: 1;
     background-color: #08C05E;
     width: 5px;
-    height: 48px;
+    height: 40px;
 }
+
+/* INFO */
+
+.info{
+    width: 220px;
+    font-family: 'League Spartan', sans-serif;
+    color: #8257E5;
+    margin-top: 85px;
+    margin-left: 10px;
+    padding: 10px;
+    text-align: left;
+    transition: 0.2s;
+}
+
+
+.info a:link{
+    position: absolute;
+    font-weight: 500;
+    text-decoration: none;
+    color: #8257E5;
+    font-size: 17px;
+}
+
+.info:hover{
+    transform: scale(1.05);
+}
+
+.info .arrow img{
+    margin-top: -4px;
+    position: absolute;
+    z-index: 1;
+    margin-left: 155px;
+}
+
+/* RODAPÉ */
+footer{
+    opacity: 30%;
+    width: 220px;
+    color: white;
+    margin-top: 110px;
+    margin-left: 10px;
+    padding: 10px;
+    text-align: left;
+    font-size: 14px;
+    transition: 0.2s;
+  }
+
+footer a:link {
+    color: white
+ }
+
+ footer:hover{
+    transform: scale(1.03);
+ }
+
 /* Background */
 div.background{
     width: 100%;
     height: 100%;
-  
+
     left: 50%;
-  
+
     position: fixed;
     z-index: 0;
   }
   
   img.background{
     height: 100vh;
-    width: 50vw;
+    width: 60vw;
   }
-
-
